fix: remove duplicate StringUtils, relax ProxiedHandlerChain cast, downgrade Disruptor to 3.4.4, align JDK 17 baseline, drop §12 defect section